--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sentei",
-  "version": "0.3.4",
+  "version": "0.3.5",
   "bin": {
     "sentei": "bin/cli.js"
   },
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "tsc"
   },
+  "repository": "https://github.com/potato4d/sentei",
   "dependencies": {
     "@types/chalk": "^2.2.0",
     "chalk": "^2.4.1",
